Update example env

--- a/.env.example
+++ b/.env.example
@@ -4,8 +4,11 @@ SERVER_PORT=443
 SSL_CERT={{PATH_TO_SSL_CERT}}
 SSL_KEY={{PATH_TO_SSL_KEY}}
 SERVER_HOSTNAME=0.0.0.0
+
 DB_HOST=localhost
 DB_NAME=database
 DB_USER=supersecretuser
 DB_PASS=hunter4
 DB_PORT=5432
+
+JWT_SECRET={{RANDOM_STRING}}
